tests/failures/f00_empty_tag.rs
use pinny::tag;

#[tag()]
#[test]
fn test_compilation_failure() {}

fn main() {}
